--- a/jobs/templates/_macros.html
+++ b/jobs/templates/_macros.html
@@ -8,7 +8,9 @@
         <div class="card-content">
             <div class="content">
                 <p>
-                    <a>{{ job['employer_name'] }}</a>
+                    <a href="{{ url_for('employer', employer_id=job['employer_id']) }}">
+                        {{ job['employer_name'] }}
+                    </a>
                     <br>
                         ${{ job['salary'] }}
                     <br>
